# AutoCrypt

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Project_spec.md  README.md  pyproject.toml
docs/: data-dictionary.md  event-schema.md  iteration-2-strategy.md  phase-0-session-synthesis.md  phase-1-synthesis.md  phase-2-profile-dune.md  phase-2-profile-rerun.md  phase-2-profile.md  phase-2-synthesis.md  phase-2b-synthesis.md  phase-2c-synthesis.md  phase-2d-synthesis.md  phase-2e-synthesis.md  phase-2f-synthesis.md  phase-2g-synthesis.md  phase-3-attribution-dune.md  phase-3-synthesis.md  phase-G0-census.md  phase-G0-synthesis.md  phase-G1-synthesis.md  phase-G1b-synthesis.md  phase-M1-synthesis.md  phase-M1b-synthesis.md  phase-M2-cost-profile.md  phase-M2-synthesis.md  phase-M3-killgate.md  phase-M3-synthesis.md  provider-evaluation.md
scripts/: g0_collect.sh  g0_collect_interim.sh  g0_stop.sh  midcap_snapshot_loop.sh
src/autocrypt/: __init__.py  cli.py  config.py  logging.py
src/autocrypt/attribution/: __init__.py  signal.py  wallet_book.py
src/autocrypt/grad/: __init__.py  accumulator_label.py  graduation.py  wallet_book.py
src/autocrypt/ingestion/: __init__.py  backfill.py  collect.py  dune_backfill.py  poll.py  stream.py
src/autocrypt/midcap/: __init__.py  bars.py  barsignals.py  costs.py  killgate.py  mcap_rank.py  universe.py
src/autocrypt/profiler/: __init__.py  dataset.py  execution.py  liquidity.py  profiler.py  report.py  rugfilter.py  signals.py
src/autocrypt/providers/: __init__.py  base.py  bitquery.py  coingecko.py  dexpaprika.py  dune.py  flipside.py  geckoterminal.py
src/autocrypt/quality/: __init__.py  checks.py
src/autocrypt/schema/: __init__.py  events.py
src/autocrypt/storage/: __init__.py  store.py
tests/: test_attribution.py  test_bitquery.py  test_collect.py  test_config.py  test_dexpaprika.py  test_dune.py  test_dune_backfill.py  test_flipside.py  test_grad_accumulator_label.py  test_grad_graduation.py  test_grad_wallet_book.py  test_midcap.py  test_midcap_costs.py  test_midcap_killgate.py  test_midcap_mcap_rank.py  test_profiler.py  test_schema.py  test_store.py
