[project]
name = "autocrypt"
version = "0.1.0"
description = "Research-first detector of on-chain signals that precede low-cap Solana run-ups (data layer)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "AutoCrypt" }]

# Phase 1 = read-only data ingestion + historical backfill.
# Keep deps lean and pinned; no trading/execution libs in this phase.
dependencies = [
    # HTTP / GraphQL / websockets for provider APIs (read-only)
    "httpx>=0.27,<0.29",                # GraphQL/REST POST queries (read-only)
    "websockets>=13,<16",               # Bitquery GraphQL-WS streaming subscriptions
    "tenacity>=9,<10",                  # retry/backoff for flaky endpoints

    # Schema / config / validation
    "pydantic>=2.8,<3",                 # canonical event schema models
    "pydantic-settings>=2.4,<3",        # typed config from env (.env)
    "python-dotenv>=1.0,<2",

    # Local analytical store + columnar IO (point-in-time backtest store)
    "duckdb>=1.1,<2",
    "pyarrow>=17,<22",
    "polars>=1.6,<2",
    "pytz>=2024.1",                     # DuckDB TIMESTAMPTZ <-> Python conversion

    # CLI + structured logging + pretty output for helper scripts
    "typer>=0.12,<0.18",
    "structlog>=24.4,<26",
    "rich>=13.7,<15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.26",
    "ruff>=0.6,<0.13",
    "mypy>=1.11,<2",
]

[project.scripts]
autocrypt = "autocrypt.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autocrypt"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
